<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:paddingBottom="0dp"
    tools:context="com.example.zedin.entregaunodes.M11HistorialActivity">

    <Button
        android:id="@+id/btn_dia"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_quemadas"
        android:text="@string/btn_dia" />

    <Button
        android:id="@+id/btn_semana"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_semana"
        android:layout_below="@+id/btn_dia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_mes"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_semana"
        android:text="@string/btn_mes" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/cb_quemadas"
        android:layout_toLeftOf="@+id/btn_dia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/cb_consumidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="43dp"
        android:checked="true"
        android:onClick="activarDesactivarConsumidas"
        android:text="@string/cb_consumidas" />

    <CheckBox
        android:id="@+id/cb_quemadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cb_consumidas"
        android:layout_alignLeft="@+id/cb_consumidas"
        android:layout_alignRight="@+id/cb_consumidas"
        android:layout_alignStart="@+id/cb_consumidas"
        android:layout_below="@+id/cb_consumidas"
        android:checked="true"
        android:duplicateParentState="false"
        android:onClick="activarDesactivarQuemadas"
        android:text="@string/cb_quemadas" />

    <Button
        android:id="@+id/btn_ano"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/btn_ano"
        android:layout_below="@+id/btn_mes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imgBtn_compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_ano"
        android:background="#00FF00"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:layout_toEndOf="@+id/chart"
        android:layout_toRightOf="@+id/chart" />


</RelativeLayout>
